--- a/app/src/styles/Home.css
+++ b/app/src/styles/Home.css
@@ -10,6 +10,13 @@ body {
   margin-top: 2%;
   margin-right: 2.5%;
   margin-left: 2.5%;
+  border-radius: 30px !important;
+  border-color: #ffffff !important;
+  border-width: 3px !important;
+}
+
+.cardImg {
+  border-radius: 30px !important;
 }
 
 /* .imgCol {
@@ -23,8 +30,25 @@ body {
 }
 
 .startBtn {
-  color: #97C055;
+  background-color: #97C055;
+  width: 175px;
+  height: 70px;
+  margin-left:auto;
+  margin-right:auto;
+  color: #12182B;
+  text-align: center;
+  vertical-align: middle;
+  font-size: xx-large;
+  font-weight: bold;
+  border-radius: 10px;
 }
+
+.startBtnDiv{
+  padding: 2%;
+  text-align: center;
+  background-color: #12182B;
+}
+
 
 .titleText {
   color: #ffffff;
