styling for current page

--- a/app/src/styles/Header.css
+++ b/app/src/styles/Header.css
@@ -1,17 +1,6 @@
 body {
-    background-color: #12182B;
-  }
-
-.TitleDiv {
-  text-align: center;
-}
-
-.TitleText {
-    color: #ffffff;
-}
-
-body {
   background-color: #12182B;
+  max-height: 100vh;
 }
 
 .TitleDiv {
@@ -29,13 +18,24 @@ background-color: #55BEC0;
   margin: 20px auto;
   padding: 2px;
   margin-right: 0;
-  height: 40%;
+  height: 60%;
   width: 100%;
   text-align: center;
+  font-size: 24px;
 }
 
-.topButtons:hover {
+
+.currentPageButton {
   background-color: #6DFFE7;
+  border-radius: 7px;
+  font-weight: bold;
+  margin: 20px auto;
+  padding: 2px;
+  margin-right: 0;
+  height: 60%;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
 }
 
 .welcome {
@@ -50,4 +50,5 @@ background-color: #55BEC0;
 .welcome {
   font-weight: 400;
   color: white;
+  font-size: 20px;
 }
