--- a/app/src/styles/Home.css
+++ b/app/src/styles/Home.css
@@ -33,7 +33,7 @@ body {
 }
 
 .startBtn {
-  background-color: #97C055;
+  background-color: #fff;
   width: 175px;
   height: 70px;
   margin-left:auto;
