--- a/app/src/styles/ExerciseInfoSection.css
+++ b/app/src/styles/ExerciseInfoSection.css
@@ -8,6 +8,13 @@ body {
   border-radius: 7px;
 }
 
+.greyBackground {
+  display: inline-block;
+  background-color: #E5E5E5;
+  border-radius: 2px;
+  margin-top: 2%;
+}
+
 .titleText {
   font-size: 50px;
   color: white;
