--- a/app/src/styles/Header.css
+++ b/app/src/styles/Header.css
@@ -16,13 +16,18 @@ text-align: center;
   border-radius: 7px;
   font-weight: bold;
   margin: 20px auto;
-  padding: 2px;
+  padding: 1% 5%;
   margin-right: 0;
   height: 60%;
   width: 100%;
   text-align: center;
   font-size: 24px;
-  color: black !important;
+  color: black;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .currentPageButton {
@@ -30,13 +35,18 @@ text-align: center;
   border-radius: 7px;
   font-weight: bold;
   margin: 20px auto;
-  padding: 2px;
+  padding: 1% 5%;
   margin-right: 0;
   height: 60%;
   width: 100%;
   text-align: center;
   font-size: 24px;
   color: black;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .welcome {
