--- a/app/src/styles/Home.css
+++ b/app/src/styles/Home.css
@@ -17,6 +17,18 @@ body {
   width: 20%;
 }
 
+.card:focus {
+  margin-top: 2%;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  border-radius: 30px !important;
+  border-color: #8CC01E !important;
+  border-width: 3px !important;
+  height: 20%;
+  width: 20%;
+}
+
+
 .cardImg {
   border-radius: 30px !important;
 }
@@ -43,6 +55,22 @@ body {
   font-size: xx-large;
   font-weight: bold;
   border-radius: 10px;
+  text-decoration: none;
+}
+
+.startBtn:hover {
+  background-color: #fff;
+  width: 175px;
+  margin-left:auto;
+  margin-right:auto;
+  color: #12182B;
+  text-align: center;
+  vertical-align: middle;
+  font-size: xx-large;
+  font-weight: bold;
+  border-radius: 10px;
+  text-decoration: none;
+  opacity: 80%;
 }
 
 .startBtnDiv{
