--- a/app/src/styles/Login.css
+++ b/app/src/styles/Login.css
@@ -28,3 +28,16 @@
     border-radius: 10px;
     height: 60px;
 }
+
+.loginBtn:hover {
+    margin-top: 3%;
+    width: 20%;
+    margin-left: 40%;
+    margin-bottom: 30px;
+    font-size: 40px;
+    color: #12182B;
+    background-color: #55BEC0;
+    border-radius: 10px;
+    height: 60px;
+    opacity: 80%;
+}
