--- a/app/src/styles/Confirmation.css
+++ b/app/src/styles/Confirmation.css
@@ -3,11 +3,11 @@
   border-radius: 7px;
   font-weight: bold;
   padding: 1% 5%;
-  height: 60%;
-  width: 100%;
+  width: 175px;
+  height: 75px;
   text-align: center;
   font-size: 24px;
-  color: black;
+  color: black!important;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -20,11 +20,11 @@
   border-radius: 7px;
   font-weight: bold;
   padding: 1% 5%;
-  height: 60%;
-  width: 100%;
+  height: 75px;
+  width: 175px;
   text-align: center;
   font-size: 24px;
-  color: black;
+  color: #12182b;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
