--- a/app/src/styles/ExerciseInfoSection.css
+++ b/app/src/styles/ExerciseInfoSection.css
@@ -10,7 +10,7 @@ body {
 
 .greyBackground {
   display: inline-block;
-  background-color: #E5E5E5;
+  background-color: #595d6a;
   border-radius: 2px;
   margin-top: 2%;
 }
