--- a/app/src/styles/Home.css
+++ b/app/src/styles/Home.css
@@ -50,16 +50,23 @@ body {
   margin-left:auto;
   margin-right:auto;
   color: #12182B;
+  height: 75px;
   text-align: center;
   vertical-align: middle;
   font-size: xx-large;
   font-weight: bold;
   border-radius: 10px;
   text-decoration: none;
+    display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .startBtn:hover {
   background-color: #fff;
+  height: 75px;
   width: 175px;
   margin-left:auto;
   margin-right:auto;
